--- a/app/sass/_variables.sass
+++ b/app/sass/_variables.sass
@@ -1,2 +1,8 @@
-
-
+/*fonts*/
+$accent-font: 'montserratbold', Arial, sans-serif;
+$text-font: 'robotolight', Arial, sans-serif;
+$sub-font: 'montserratregular', Arial, sans-serif;
+/*colors*/
+$accent-color: #ff4e50;
+$title-color: #333;
+$text-color: #666;
