--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -2,6 +2,17 @@
 @import "_fonts";
 @import "_header";
 /*styles to write here*/
+/*SECTION WORKS*/
+.section-title
+	font-size: 22px
+	margin: 37px 0 15px
+	letter-spacing: 0.2px
+.works__item
+	width: 300px
+	height: 240px
+	background-color: #eee
+	float: left
+	margin-bottom: 10px
 
 
 
