--- a/app/sass/_variables.sass
+++ b/app/sass/_variables.sass
@@ -4,5 +4,6 @@ $text-font: 'robotolight', Arial, sans-serif;
 $sub-font: 'montserratregular', Arial, sans-serif;
 /*colors*/
 $accent-color: #ff4e50;
+$accent-hover: #ec4a4c;
 $title-color: #333;
 $text-color: #666;
