--- a/app/sass/_header.sass
+++ b/app/sass/_header.sass
@@ -24,7 +24,7 @@ a
 	border-radius: 20px
 	border: 2px solid transparent
 	&:hover
-		background-color: #ec4a4c
+		background-color: $accent-hover
 		color: #fff
 .btn--large
 	padding: 10px 35px
