--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -100,6 +100,17 @@
 		margin-bottom: 0
 		&--last
 			margin-right: 0
+	/*PARTNERS*/
+	.section-title--partners
+		margin-bottom: 33px
+	.partners__item
+		float: left
+		width: 50%
+		padding: 0 36px
+		margin-bottom: 50px
+	.partners__wrap
+		max-width: 580px
+		margin: 0 auto
 
 
 /* Medium Devices, Desktops */
@@ -117,6 +128,14 @@
 	.works__item
 		width: 300px
 		height: 400px
+	/*PARTNERS*/
+	.partners__item
+		float: left
+		width: 25%
+		padding: 0 10px
+		margin-bottom: 44px
+	.partners__wrap
+		max-width: 100%
 
 
 /* Large Devices, Wide Screens */
