--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -13,6 +13,61 @@
 	background-color: #eee
 	float: left
 	margin-bottom: 10px
+/*SECTION PARTNERS*/
+.section-title--partners
+	margin-top: 29px
+	line-height: 24px
+.partners
+	&__item
+		width: 100%
+		padding: 0 35px
+		margin: 0 auto 23px
+		&--last
+			margin-bottom: 40px
+	&__img-wrap
+		display: inline-block
+		position: relative
+	&__img
+		width: auto
+		height: 100%
+	&__icon
+		background-color: $accent-color
+		position: absolute
+		bottom: 0
+		right: 0
+		width: 40px
+		height: 40px
+		border: 4px solid #fff
+		border-radius: 50%
+		color: #fff
+	&__description
+		font-family: $text-font
+		color: $text-color
+		font-size: 13.97px
+		line-height: 18px
+	&__title
+		margin: 16px 0 12px
+.icon-tv,
+.icon-plane,
+.icon-flask,
+.icon-cup
+	line-height: 28px
+	font-size: 18px
+.icon-cup
+	background-color: #1cd7ad
+.icon-flask
+	background-color: #ffa507
+.icon-plane
+	background-color: #4e73db
+.btn--large--stroke
+	background-color: transparent
+	border: 2px solid $accent-color
+	color: $accent-color
+	padding: 10px 60px
+	&:hover
+		color: $accent-hover
+		border: 2px solid $accent-hover
+		background: transparent
 
 
 
