Added search and footer

--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -111,7 +111,41 @@
 	.partners__wrap
 		max-width: 580px
 		margin: 0 auto
-
+	/*IDEAS*/
+	.ideas__item
+		height: 970px
+	.section-title--ideas
+		margin-top: 110px
+	/*SEARCH*/
+	.search__paragraph
+		margin-bottom: 37px
+	.search__input-text
+		width: 235px
+		margin-right: 20px
+	.btn--large-input
+		padding: 10px 25px
+	/*FOOTER*/
+	.container--footer
+		padding: 20px 40px 40px
+	.footer
+		margin-top: 91px
+		&__logo
+			float: left
+	.footer-menu
+		float: left
+		margin-left: 80px
+		text-align: left
+	.footer-menu__item
+		display: block
+		margin: 16px 0 -6px
+	.footer-menu__title--second
+		float: left
+		margin-left: 103px
+	.footer__copy
+		float: right
+		text-align: right
+	.footer-menu__title
+		margin-top: 0
 
 /* Medium Devices, Desktops */
 @media only screen and (min-width : 960px)
@@ -136,6 +170,18 @@
 		margin-bottom: 44px
 	.partners__wrap
 		max-width: 100%
+	/*SEARCH*/
+	.search__paragraph
+		margin-bottom: 42px
+	/*FOOTER*/
+	.footer
+		margin-top: 88px
+		padding-top: 38px
+		padding-bottom: 40px
+	.footer-menu
+		margin-left: 93px
+	.footer-menu__title--second
+		margin-left: 93px
 
 
 /* Large Devices, Wide Screens */
