--- a/app/css/main.css
+++ b/app/css/main.css
@@ -144,7 +144,7 @@ a {
 .partners__item {
   width: 100%;
   padding: 0 35px;
-  margin: 0 auto 23px; }
+  margin: 0 auto 24px; }
   .partners__item--last {
     margin-bottom: 40px; }
 
@@ -153,8 +153,10 @@ a {
   position: relative; }
 
 .partners__img {
-  width: auto;
-  height: 100%; }
+  -webkit-border-radius: 50%;
+          border-radius: 50%;
+  width: 120px;
+  height: 120px; }
 
 .partners__icon {
   background-color: #ff4e50;
@@ -202,6 +204,85 @@ a {
     color: #ec4a4c;
     border: 2px solid #ec4a4c;
     background: transparent; }
+
+/*IDEAS*/
+.section-title--ideas {
+  margin-top: 50px;
+  line-height: 24px; }
+
+.ideas__item {
+  width: 100%;
+  height: 900px;
+  background-color: #eee; }
+
+/*SEARCH*/
+.section-title--search {
+  margin-top: 41px;
+  margin-bottom: 18px; }
+
+.search__paragraph {
+  font-family: "robotolight", Arial, sans-serif;
+  font-size: 17.95px;
+  margin-bottom: 18px; }
+
+.btn--large-input {
+  color: #fff;
+  outline: 0; }
+
+.search__input-text {
+  width: 280px;
+  padding: 12px 18px;
+  margin-bottom: 10px;
+  border: 1px solid #ccc;
+  -webkit-border-radius: 4px;
+          border-radius: 4px;
+  -webkit-box-shadow: 0 1px 0 #eee;
+          box-shadow: 0 1px 0 #eee;
+  outline: 0; }
+
+.btn--large-input {
+  padding: 10px 85px;
+  cursor: pointer;
+  -webkit-appearance: none; }
+
+/*FOOTER*/
+.footer {
+  border-top: 4px solid #ff4e50;
+  margin-top: 40px;
+  padding-top: 17px; }
+  .footer__logo {
+    color: #ff4e50;
+    font-size: 16.02px;
+    letter-spacing: 1px; }
+    .footer__logo:hover {
+      color: #ec4a4c; }
+
+.footer-menu__title {
+  margin: 15px 0 4px;
+  font-size: 14.02px; }
+
+.footer-menu__item {
+  display: inline-block;
+  font-family: "robotolight", Arial, sans-serif;
+  margin: 0 5px; }
+
+.footer-menu__link {
+  color: #666;
+  display: block; }
+
+.footer__copy-title {
+  color: #ccc;
+  text-transform: uppercase;
+  font-size: 9.95px;
+  letter-spacing: 1px; }
+
+.footer-menu__title--second {
+  margin-bottom: 13px; }
+
+.footer__copy-logo {
+  display: block;
+  margin-top: 7px;
+  margin-bottom: 20px; }
 
 /*media queries*/
 /*==========  Desktop First Method  ==========*/
@@ -298,7 +379,42 @@ a {
     margin-bottom: 50px; }
   .partners__wrap {
     max-width: 580px;
-    margin: 0 auto; } }
+    margin: 0 auto; }
+  /*IDEAS*/
+  .ideas__item {
+    height: 970px; }
+  .section-title--ideas {
+    margin-top: 110px; }
+  /*SEARCH*/
+  .search__paragraph {
+    margin-bottom: 37px; }
+  .search__input-text {
+    width: 235px;
+    margin-right: 20px; }
+  .btn--large-input {
+    padding: 10px 25px; }
+  /*FOOTER*/
+  .container--footer {
+    padding: 20px 40px 40px; }
+  .footer {
+    margin-top: 91px; }
+    .footer__logo {
+      float: left; }
+  .footer-menu {
+    float: left;
+    margin-left: 80px;
+    text-align: left; }
+  .footer-menu__item {
+    display: block;
+    margin: 16px 0 -6px; }
+  .footer-menu__title--second {
+    float: left;
+    margin-left: 103px; }
+  .footer__copy {
+    float: right;
+    text-align: right; }
+  .footer-menu__title {
+    margin-top: 0; } }
 
 /* Medium Devices, Desktops */
 @media only screen and (min-width: 960px) {
@@ -322,7 +438,19 @@ a {
     padding: 0 10px;
     margin-bottom: 44px; }
   .partners__wrap {
-    max-width: 100%; } }
+    max-width: 100%; }
+  /*SEARCH*/
+  .search__paragraph {
+    margin-bottom: 42px; }
+  /*FOOTER*/
+  .footer {
+    margin-top: 88px;
+    padding-top: 38px;
+    padding-bottom: 40px; }
+  .footer-menu {
+    margin-left: 93px; }
+  .footer-menu__title--second {
+    margin-left: 93px; } }
 
 /* Large Devices, Wide Screens */
 @media only screen and (min-width: 1200px) {
