--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -21,15 +21,16 @@
 	&__item
 		width: 100%
 		padding: 0 35px
-		margin: 0 auto 23px
+		margin: 0 auto 24px
 		&--last
 			margin-bottom: 40px
 	&__img-wrap
 		display: inline-block
 		position: relative
 	&__img
-		width: auto
-		height: 100%
+		border-radius: 50%
+		width: 120px
+		height: 120px
 	&__icon
 		background-color: $accent-color
 		position: absolute
@@ -68,7 +69,69 @@
 		color: $accent-hover
 		border: 2px solid $accent-hover
 		background: transparent
-
+/*IDEAS*/
+.section-title--ideas
+	margin-top: 50px
+	line-height: 24px
+.ideas__item
+	width: 100%
+	height: 900px
+	background-color: #eee
+/*SEARCH*/
+.section-title--search
+	margin-top: 41px
+	margin-bottom: 18px
+.search__paragraph
+	font-family: $text-font
+	font-size: 17.95px
+	margin-bottom: 18px
+.btn--large-input
+	color: #fff
+	outline: 0
+.search__input-text
+	width: 280px
+	padding: 12px 18px
+	margin-bottom: 10px
+	border: 1px solid #ccc
+	border-radius: 4px
+	box-shadow: 0 1px 0 #eee
+	outline: 0
+.btn--large-input
+	padding: 10px 85px
+	cursor: pointer
+	-webkit-appearance: none
+/*FOOTER*/
+.footer
+	border-top: 4px solid $accent-color 
+	margin-top: 40px
+	padding-top: 17px
+	&__logo
+		color: $accent-color
+		font-size: 16.02px
+		letter-spacing: 1px
+		&:hover
+			color: $accent-hover
+.footer-menu__title
+	margin: 15px 0 4px
+	font-size: 14.02px
+.footer-menu__item
+	display: inline-block
+	font-family: $text-font
+	margin: 0 5px
+.footer-menu__link
+	color: $text-color
+	display: block
+.footer__copy-title
+	color: #ccc
+	text-transform: uppercase
+	font-size: 9.95px
+	letter-spacing: 1px
+.footer-menu__title--second
+	margin-bottom: 13px
+.footer__copy-logo
+	display: block
+	margin-top: 7px
+	margin-bottom: 20px
 
 
 /*media queries*/
