--- a/app/css/main.css
+++ b/app/css/main.css
@@ -129,12 +129,75 @@ a {
   margin: 37px 0 15px;
   letter-spacing: 0.2px; }
 
-.works__item {
+.btn--mini {
+  background-color: #ff4e50;
+  padding: 2px 14px;
+  letter-spacing: 2px; }
+
+.works__wrap {
+  width: 300px;
+  margin: 0 auto; }
+
+.works__slider {
   width: 300px;
   height: 240px;
-  background-color: #eee;
   float: left;
   margin-bottom: 10px; }
+  .works__slider-item {
+    width: 100%;
+    height: 100%;
+    position: relative; }
+    .works__slider-item--last {
+      margin-bottom: 0; }
+  .works__slider-img {
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 240px;
+    -webkit-border-radius: 4px;
+            border-radius: 4px; }
+    .works__slider-img:after {
+      content: '';
+      width: 100%;
+      height: 100%;
+      position: absolute;
+      top: 0;
+      left: 0; }
+  .works__slider-description {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    text-align: left;
+    padding: 20px; }
+    .works__slider-description__btn {
+      font-family: "montserratregular", Arial, sans-serif;
+      color: #fff;
+      font-size: 10px; }
+    .works__slider-description__title {
+      color: #fff;
+      font-size: 24px;
+      margin: 19px 0 17px;
+      line-height: 27px; }
+    .works__slider-description__paragraph {
+      color: #ccc;
+      font-size: 14px;
+      line-height: 18px;
+      font-family: "robotolight", Arial, sans-serif; }
+
+.item-img-1 {
+  background-image: url("../img/slide1.jpg"); }
+
+.item-img-2 {
+  background-image: url("../img/slide2.jpg"); }
+
+.item-img-3 {
+  background-image: url("../img/slide3.jpg"); }
+
+/*controls*/
+aside[id*="-control"] .slidr-control.right:after,
+aside[id*="-control"] .slidr-control.left:after,
+aside[id*="-control"] .slidr-control.up:after {
+  border-color: transparent !important; }
 
 /*SECTION PARTNERS*/
 .section-title--partners {
@@ -232,13 +295,15 @@ a {
 .search__input-text {
   width: 280px;
   padding: 12px 18px;
+  margin: 0 auto;
   margin-bottom: 10px;
   border: 1px solid #ccc;
   -webkit-border-radius: 4px;
           border-radius: 4px;
   -webkit-box-shadow: 0 1px 0 #eee;
           box-shadow: 0 1px 0 #eee;
-  outline: 0; }
+  outline: 0;
+  display: block; }
 
 .btn--large-input {
   padding: 10px 85px;
@@ -362,13 +427,35 @@ a {
   .section-title {
     margin: 98px 0 35px;
     letter-spacing: 0; }
-  .works__item {
+  .works__wrap {
+    width: 750px; }
+  .works__slider {
     width: 235px;
     height: 400px;
-    margin-right: 20px;
-    margin-bottom: 0; }
-    .works__item--last {
-      margin-right: 0; }
+    margin-bottom: 0;
+    margin-right: 20px; }
+    .works__slider-img {
+      height: 400px; }
+  /*controls*/
+  aside[id*="-control"] .slidr-control.right,
+  aside[id*="-control"] .slidr-control.left {
+    width: 30px !important;
+    height: 56px !important;
+    top: 50% !important;
+    margin-top: -160px !important;
+    background-image: url(../sprites/sprite.png);
+    opacity: 0.4; }
+  aside[id*="-control"] .slidr-control.right {
+    right: 25px !important;
+    background-position: -30px 0px; }
+  aside[id*="-control"] .slidr-control.left {
+    left: 25px !important;
+    background-position: 0 0; }
+  aside[id*="-control"] .slidr-control.right:hover,
+  aside[id*="-control"] .slidr-control.left:hover {
+    opacity: 1; }
+  .works__slider--last {
+    margin-right: 0; }
   /*PARTNERS*/
   .section-title--partners {
     margin-bottom: 33px; }
@@ -390,7 +477,8 @@ a {
     margin-bottom: 37px; }
   .search__input-text {
     width: 235px;
-    margin-right: 20px; }
+    margin-right: 20px;
+    display: inline; }
   .btn--large-input {
     padding: 10px 25px; }
   /*FOOTER*/
@@ -428,9 +516,14 @@ a {
   .header__top-logo {
     margin-left: 0; }
   /*WORKS*/
-  .works__item {
-    width: 300px;
-    height: 400px; }
+  .works__wrap {
+    width: 940px; }
+  .works__slider {
+    width: 300px; }
+  /*controls*/
+  aside[id*="-control"] .slidr-control.left,
+  aside[id*="-control"] .slidr-control.right {
+    margin-top: -48px !important; }
   /*PARTNERS*/
   .partners__item {
     float: left;
