--- a/app/sass/libs.sass
+++ b/app/sass/libs.sass
@@ -1,3 +1,3 @@
 @import "app/libs/reset/reset";
 @import "app/fonts/icomoon/style";
-@import "app/libs/owl/owl.carousel";
+@import "app/sprites/sprite";
