--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -134,8 +134,12 @@
 		max-width: 580px
 		margin: 0 auto
 	/*IDEAS*/
-	.ideas__item
-		height: 970px
+	.grid
+		width: 768px
+		&__item,
+		&__sizer
+			width: 31.33%
+			margin: 1%
 	.section-title--ideas
 		margin-top: 110px
 	/*SEARCH*/
@@ -198,6 +202,9 @@
 		margin-bottom: 44px
 	.partners__wrap
 		max-width: 100%
+	/*IDEAS*/
+	.grid
+		width: 960px
 	/*SEARCH*/
 	.search__paragraph
 		margin-bottom: 42px
