--- a/app/css/main.css
+++ b/app/css/main.css
@@ -28,12 +28,44 @@
   font-weight: normal;
   font-style: normal; }
 
+[class^="icon-"], [class*=" icon-"] {
+  font-family: 'icomoon' !important;
+  speak: none;
+  font-style: normal;
+  font-weight: normal;
+  font-variant: normal;
+  text-transform: none;
+  line-height: 1;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale; }
+
+.icon-arrow-left:before {
+  content: "\e904"; }
+
+.icon-arrow-right:before {
+  content: "\e905"; }
+
+.icon-cup:before {
+  content: "\e900"; }
+
+.icon-flask:before {
+  content: "\e901"; }
+
+.icon-plane:before {
+  content: "\e902"; }
+
+.icon-tv:before {
+  content: "\e903"; }
+
 /*our*/
 *,
 *:before,
 *:after {
   -webkit-box-sizing: border-box;
   box-sizing: border-box; }
+
+html {
+  overflow-y: scroll; }
 
 body {
   background-color: #fff;
@@ -196,6 +228,7 @@ a {
 /*controls*/
 aside[id*="-control"] .slidr-control.right:after,
 aside[id*="-control"] .slidr-control.left:after,
+aside[id*="-control"] .slidr-control.down:after,
 aside[id*="-control"] .slidr-control.up:after {
   border-color: transparent !important; }
 
@@ -273,10 +306,56 @@ aside[id*="-control"] .slidr-control.up:after {
   margin-top: 50px;
   line-height: 24px; }
 
-.ideas__item {
-  width: 100%;
-  height: 900px;
-  background-color: #eee; }
+.grid {
+  width: 300px;
+  margin: 0 auto; }
+  .grid__sizer, .grid__item {
+    width: 100%;
+    margin-bottom: 10px;
+    float: left;
+    background-color: #333;
+    position: relative;
+    -webkit-border-radius: 4px;
+            border-radius: 4px; }
+    .grid__sizer-img, .grid__item-img {
+      display: block;
+      max-width: 100%;
+      -webkit-border-radius: 4px;
+              border-radius: 4px;
+      opacity: 0.7; }
+    .grid__sizer-title, .grid__item-title {
+      position: absolute;
+      top: 0;
+      left: 0;
+      bottom: 0;
+      right: 0;
+      margin: auto;
+      width: 60%;
+      height: 42%;
+      color: #fff;
+      font-size: 22px;
+      line-height: 24px; }
+
+.grid__item-img--m1 {
+  background-image: url("../img/m1.jpg"); }
+
+.grid__item-img--m2 {
+  background-image: url("../img/m2.jpg"); }
+
+.grid__item-img--m3 {
+  background-image: url("../img/m3.jpg"); }
+
+.grid__item-img--m4 {
+  background-image: url("../img/m4.jpg"); }
+
+.grid__item-img--m5 {
+  background-image: url("../img/m5.jpg"); }
+
+.grid__item-img--m6 {
+  background-image: url("../img/m6.jpg"); }
+
+.grid__item-img--m7 {
+  background-image: url("../img/m7.jpg"); }
 
 /*SEARCH*/
 .section-title--search {
@@ -468,8 +547,11 @@ aside[id*="-control"] .slidr-control.up:after {
     max-width: 580px;
     margin: 0 auto; }
   /*IDEAS*/
-  .ideas__item {
-    height: 970px; }
+  .grid {
+    width: 768px; }
+    .grid__item, .grid__sizer {
+      width: 31.33%;
+      margin: 1%; }
   .section-title--ideas {
     margin-top: 110px; }
   /*SEARCH*/
@@ -532,6 +614,9 @@ aside[id*="-control"] .slidr-control.up:after {
     margin-bottom: 44px; }
   .partners__wrap {
     max-width: 100%; }
+  /*IDEAS*/
+  .grid {
+    width: 960px; }
   /*SEARCH*/
   .search__paragraph {
     margin-bottom: 42px; }
