--- a/app/sass/_fonts.sass
+++ b/app/sass/_fonts.sass
@@ -22,3 +22,32 @@
   src: url('../fonts/roboto-light/roboto-light.eot?#iefix') format("embedded-opentype"), url('../fonts/roboto-light/roboto-light.woff2') format("woff2"), url('../fonts/roboto-light/roboto-light.woff') format("woff"), url('../fonts/roboto-light/roboto-light.ttf') format("truetype")
   font-weight: normal
   font-style: normal
+
+[class^="icon-"], [class*=" icon-"]
+  font-family: 'icomoon' !important
+  speak: none
+  font-style: normal
+  font-weight: normal
+  font-variant: normal
+  text-transform: none
+  line-height: 1
+  -webkit-font-smoothing: antialiased
+  -moz-osx-font-smoothing: grayscale
+
+.icon-arrow-left:before
+  content: "\e904"
+
+.icon-arrow-right:before
+  content: "\e905"
+
+.icon-cup:before
+  content: "\e900"
+
+.icon-flask:before
+  content: "\e901"
+
+.icon-plane:before
+  content: "\e902"
+
+.icon-tv:before
+  content: "\e903"
