--- a/app/sass/_header.sass
+++ b/app/sass/_header.sass
@@ -5,6 +5,8 @@
 	-webkit-box-sizing: border-box
 	-moz-box-sizing: border-box
 	box-sizing: border-box
+html
+	overflow-y: scroll
 body
 	background-color: #fff
 	color: $title-color
