--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -67,6 +67,7 @@
 /*controls*/
 aside[id*="-control"] .slidr-control.right:after,
 aside[id*="-control"] .slidr-control.left:after,
+aside[id*="-control"] .slidr-control.down:after,
 aside[id*="-control"] .slidr-control.up:after
   border-color: transparent !important
 /*SECTION PARTNERS*/
@@ -129,10 +130,48 @@ aside[id*="-control"] .slidr-control.up:after
 .section-title--ideas
 	margin-top: 50px
 	line-height: 24px
-.ideas__item
-	width: 100%
-	height: 900px
-	background-color: #eee
+.grid
+	width: 300px
+	margin: 0 auto
+	&__sizer,
+	&__item
+		width: 100%
+		margin-bottom: 10px
+		float: left
+		background-color: #333
+		position: relative
+		border-radius: 4px
+		&-img
+			display: block
+			max-width: 100%
+			border-radius: 4px
+			opacity: 0.7
+		&-title
+			position: absolute
+			top: 0
+			left: 0
+			bottom: 0
+			right: 0
+			margin: auto
+			width: 60%
+			height: 42%
+			color: #fff
+			font-size: 22px
+			line-height: 24px
+.grid__item-img--m1
+	background-image: url("../img/m1.jpg")
+.grid__item-img--m2
+	background-image: url("../img/m2.jpg")
+.grid__item-img--m3
+	background-image: url("../img/m3.jpg")
+.grid__item-img--m4
+	background-image: url("../img/m4.jpg")
+.grid__item-img--m5
+	background-image: url("../img/m5.jpg")
+.grid__item-img--m6
+	background-image: url("../img/m6.jpg")
+.grid__item-img--m7
+	background-image: url("../img/m7.jpg")
 /*SEARCH*/
 .section-title--search
 	margin-top: 41px
