fixed x-scroll bug

--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -135,11 +135,11 @@
 		margin: 0 auto
 	/*IDEAS*/
 	.grid
-		width: 768px
+		width: 100%
 		&__item,
 		&__sizer
 			width: 31.33%
-			margin: 1%
+			margin: 0.9%
 	.section-title--ideas
 		margin-top: 110px
 	/*SEARCH*/
@@ -204,7 +204,7 @@
 		max-width: 100%
 	/*IDEAS*/
 	.grid
-		width: 960px
+		width: 100%
 	/*SEARCH*/
 	.search__paragraph
 		margin-bottom: 42px
