--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -146,6 +146,7 @@ aside[id*="-control"] .slidr-control.up:after
 			max-width: 100%
 			border-radius: 4px
 			opacity: 0.7
+			filter: alpha(Opacity=70)
 		&-title
 			position: absolute
 			top: 0
