--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -38,6 +38,7 @@
 			position: absolute
 			top: 0
 			left: 0
+			border-radius: 4px
 	&-description
 		position: absolute
 		bottom: 0
@@ -159,20 +160,8 @@ aside[id*="-control"] .slidr-control.up:after
 			color: #fff
 			font-size: 22px
 			line-height: 24px
-.grid__item-img--m1
-	background-image: url("../img/m1.jpg")
-.grid__item-img--m2
-	background-image: url("../img/m2.jpg")
-.grid__item-img--m3
-	background-image: url("../img/m3.jpg")
-.grid__item-img--m4
-	background-image: url("../img/m4.jpg")
-.grid__item-img--m5
-	background-image: url("../img/m5.jpg")
-.grid__item-img--m6
-	background-image: url("../img/m6.jpg")
-.grid__item-img--m7
-	background-image: url("../img/m7.jpg")
+			text-transform: capitalize
+			text-overflow: ellipsis
 /*SEARCH*/
 .section-title--search
 	margin-top: 41px
