retina support, svg logo

--- a/app/sass/_header.sass
+++ b/app/sass/_header.sass
@@ -47,6 +47,10 @@ a
 	min-height: 540px
 	text-align: center
 	color: #fff
+	background-color: #eee
+@media (-Webkit-min-device-pixel-ratio: 1.5), (-moz-min-device-pixel-ratio: 1.5), (-o-min-device-pixel-ratio: 3 / 2), (min-device-pixel-ratio: 1.5)
+	.header
+		background-image: url("../img/header@2x.jpg")
 .header__top
 	padding-top: 20px
 .header__top-logo
